--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vueuse/core": "^11.0.3",
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
     "vite-plugin-vuetify": "^2.0.4",
